@@ -23,7 +23,7 @@
   \-- mainbus0
       |-- ram0  (64 MB at offset 0)
       |-- rom0  (4 MB at offset 0xff800000)
-      \-- <a href="../components/component_m88k_cpu.html">cpu0</a>  (Motorola 88100, 50 MHz)
+      \-- <a href="../components/component_m88k_cpu.html">cpu0</a>  (88100, 50 MHz)
 </pre>
 The <tt>mvme187</tt> machine is a
 <a href="http://en.wikipedia.org/wiki/VMEbus">VMEbus</a> based machine with a
